Initial commit: video-call-lib source code and documentation

--- a/src/app/pages/call/call.page.html
+++ b/src/app/pages/call/call.page.html
@@ -1,6 +1,6 @@
 <ion-content fullscreen class="call-container">
   <!-- Remote video (main background) -->
-  <video #remote autoplay playsinline muted class="remote-video"></video>
+  <video #remote autoplay playsinline class="remote-video"></video>
 
   <!-- Header with call info -->
   <div class="call-header">
